--- a/lb-web/RASPI-PLUS-GVS/index.htm
+++ b/lb-web/RASPI-PLUS-GVS/index.htm
@@ -2,14 +2,14 @@
 <html lang="en-US"> 
 	<head> 
 		<meta charset="UTF-8"> 
-		<meta http-equiv="refresh" content="1;url=http://land-boards.com/blwiki/index.php?title=RASPI-PLUS-GVS"> 
+		<meta http-equiv="refresh" content="1;url=http://land-boards.com/blwiki/index.php?title=RasPi-B-Plus-GVS"> 
 		<script type="text/javascript"> 
-			window.location.href = "http://land-boards.com/blwiki/index.php?title=RASPI-PLUS-GVS" 
+			window.location.href = "http://land-boards.com/blwiki/index.php?title=RasPi-B-Plus-GVS" 
 		</script> 
 		<title>Page Redirection</title> 
 	</head> 
 	<body> 
 	<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-	If you are not redirected automatically, follow the <a href='http://land-boards.com/blwiki/index.php?title=RASPI-PLUS-GVS'>link to example</a> 
+	If you are not redirected automatically, follow the <a href='http://land-boards.com/blwiki/index.php?title=RasPi-B-Plus-GVS'>link to example</a> 
 	</body> 
 </html>
