--- a/lb-web/default.htm
+++ b/lb-web/default.htm
@@ -31,19 +31,19 @@
 	<tbody>
 		<tr valign="top">
 			<td width="25%">
-			<p align="center"><a href="http://land-boards.com/store/" title=""><img alt="" src="index_files/Store.png" title="" border="0" height="107" width="180"></a></p>
+			<p align="center"><a href="http://land-boards.com/store/" title=""><img alt="" src="http://land-boards.com/images/web-images/Store.png" title="" border="0" height="107" width="180"></a></p>
 			</td>
 			<td width="25%">
-			<p align="center"><a href="http://land-boards.com/blwiki/" title=""><img alt="" src="index_files/Wiki.png" title="" border="0" height="107" width="180"></a></p>
+			<p align="center"><a href="http://land-boards.com/blwiki/" title=""><img alt="" src="http://land-boards.com/images/web-images/Wiki.png" title="" border="0" height="107" width="180"></a></p>
 			</td>
 			<td width="25%">
-			<p align="center"><a href="http://land-boards.com/lb-forums/" title=""><img alt="" src="index_files/forums.png" title="" border="0" height="107" width="182"></a></p>
+			<p align="center"><a href="http://land-boards.com/lb-forums/" title=""><img alt="" src="http://land-boards.com/images/web-images/forums.png" title="" border="0" height="107" width="182"></a></p>
 			</td>
 			<td width="25%">
-			<p align="center"><a href="http://land-boards.com/about_us.htm" title=""><img alt="" src="index_files/AboutUs.png" title="" border="0" height="107" width="180"></a></p>
+			<p align="center"><a href="http://land-boards.com/about_us.htm" title=""><img alt="" src="http://land-boards.com/images/web-images/AboutUs.png" title="" border="0" height="107" width="180"></a></p>
 			</td>
 			<td width="25%">
-			<p align="center"><a href="http://land-boards.com/contact.htm" title=""><img alt="" src="index_files/ContactUs.png" title="" border="0" height="107" width="180"></a></p>
+			<p align="center"><a href="http://land-boards.com/contact.htm" title=""><img alt="" src="http://land-boards.com/images/web-images/ContactUs.png" title="" border="0" height="107" width="180"></a></p>
 			</td>
 		</tr>
 	</tbody>
@@ -54,6 +54,4 @@
 <center></center>
 
 <p></p>
-
-
 </body></html>
