--- a/lb-web/TinyGrid85/index.htm
+++ b/lb-web/TinyGrid85/index.htm
@@ -31,7 +31,8 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-Delivery in 1-4 weeks depending on stock.<br />
+Our initial batch of PCBs is running out due to the influx from the end of the kickstarter campaign.
+We are estimating delivery at about 4 weeks depending on stock.<br />
 Shipping to the US and Canada only.
 <hr>
 <h2>TinyGrid85-Basic</h2>
