--- a/lb-web/Store/index.htm
+++ b/lb-web/Store/index.htm
@@ -31,8 +31,10 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-Our initial batch of PCBs is running out due to the influx from the end of the kickstarter campaign.
+Our initial batch of 21 PCBs has run out due to the influx of orders from the end of the kickstarter campaign.
+We ordered 50 PWBs (8-10-2014) and we expect them to arrive in a couple of weeks (our PCB vendor gets boards back to us in about 12 days).
 We are estimating delivery at about 4 weeks depending on stock.<br />
+Order early to be at the front of the line when the new boards come in.
 Shipping to the US and Canada only.
 <hr>
 <h2>TinyGrid85-Basic</h2>
@@ -49,8 +51,6 @@ The TinyGrid85 board fully assembled and tested with GVS connectors installed.
 The TinyGrid85 board - blank Printed Circuit Board. You supply the parts.
 	<p>
 <img src="http://land-boards.com/blwiki/images/7/71/Tiny85-bare-640-X2-PWB-001.JPG">
-	<p>
-	<p>
 	<p>
 	</body> 
 </html>
