--- a/lb-web/Store/index.htm
+++ b/lb-web/Store/index.htm
@@ -7,10 +7,47 @@
 	<body>
 	<h1>land-boards Store</h1>
 	<p>Buy one or more of our boards here.
-	<p>	
-	<h2>TinyGrid85 - As seen on kickstarter</h2>
+	<h2>Arduino Compatible Cards</h2>
+	<h3>TinyGrid85 - ATTiny85 Prototyping Board</h3>
+	 <a href="https://www.kickstarter.com/projects/land-boards/attiny-tinygrid85-arduino">TinyGrid85 on Kickstarter</a> (Ended 8-7-2014)
+	<br />
 	<a href="http://land-boards.com/blwiki/index.php?title=TinyGrid85">TinyGrid85 Wiki page</a>
 	<br />
 	<a href="http://land-boards.com/TinyGrid85/">TinyGrid85 Store page</a>
+
+	<h3>GVS-32U4 - Arduino Leonardo compatible with GVS pins</h3>
+	<a href="http://land-boards.com/blwiki/index.php?title=GVS-32U4">GVS-32U4 Wiki page</a>
+	<br />
+	<a href="https://www.tindie.com/products/land_boards/gvs-32u4/">GVS-32U4 Tindie page</a>
+
+	<h3>Screwduino - Arduino UNO compatible with screw terminals</h3>
+	<a href="http://land-boards.com/blwiki/index.php?title=Screwduino">Screwduino Wiki page</a>
+	<br />
+	<a href=" https://www.tindie.com/products/land_boards/screwduino-arduino-compatible-with-screw-terminals/">Screwduino Tindie page</a>
+
+	<hr>	
+	<h2>Raspberry Pi Cards</h2>
+	<h3>RasPi-GVS - Raspberry Pi GVS Card</h3>
+	<a href="http://land-boards.com/blwiki/index.php?title=RasPi-GVS">BBB-GVS Wiki page</a>
+	<br />
+	<a href="https://www.kickstarter.com/projects/land-boards/gvs-board-for-raspberry-pi">BBB-GVS Kickstarter page</a> (Ends Sept 7, 2014)
+
+	<h3>RasPi-B-Plus-GVS - Raspberry Pi Model B+ GVS Card</h3>
+	<a href="http://land-boards.com/blwiki/index.php?title=RasPi-B-Plus-GVS">RasPi-B-Plus-GVS Wiki page</a>
+	<br />
+	<a href="https://www.kickstarter.com/projects/land-boards/gvs-card-for-the-raspberry-pi-b-plus">RasPi-B-Plus-GVS Kickstarter page</a> (Ends Sept 7, 2014)
+
+	<hr>
+	<h2>BeagleBone Capes</h2>
+	<h3>BBB-GVS - BeagleBone Black GVS Card</h3>
+	<a href="http://land-boards.com/blwiki/index.php?title=BBB-GVS">BBB-GVS Wiki page</a>
+	<br />
+	<a href="https://www.kickstarter.com/projects/land-boards/33v-5v-gvs-cape-for-the-beaglebone">BBB-GVS Kickstarter page</a> (Ends Sept 7, 2014)
+
+	<br />
+&nbsp;
+	<hr>
+	<br />
+&nbsp;
 	</body> 
 </html>
