--- a/lb-web/TinyGrid85/index.htm
+++ b/lb-web/TinyGrid85/index.htm
@@ -31,12 +31,19 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-	
-Our initial batch of 21 PCBs has run out due to the influx of orders from the end of the kickstarter campaign.
-We ordered 50 PWBs (8-10-2014) and we expect them to arrive in a couple of weeks (our PCB vendor gets boards back to us in about 12 days).
-We are estimating delivery at about 4 weeks depending on stock.<br />
-Order early to be at the front of the line when the new boards come in.
+
 Shipping to the US and Canada only.
+
+<h2>Project Status</h2>
+
+<li>Our initial batch of boards ran out due to the rush of orders from the end of the kickstarter campaign.
+<li>We ordered 50 PWBs (8-10-2014).
+<li>We received notice that the PWBs had shipped (8-14-2014).
+<li>We expect the PWBs to arrive in a week (typical delivery time is 8 days).
+<li>Depending upon how many boards we have in backlog we should be able to ship around the end of August 2014.
+<li>Order early to be at the front of the line when the new boards come in.
+<p>
+If you have any questions, don't hesitate to <a href="http://land-boards.com/contact.htm">reach out to us</a>.
 <hr>
 <h2>TinyGrid85-Basic</h2>
 The TinyGrid85 board fully assembled.
