updated tinygrid85 page

--- a/lb-web/TinyGrid85/index.htm
+++ b/lb-web/TinyGrid85/index.htm
@@ -36,12 +36,14 @@ Shipping to the US and Canada only.
 
 <h2>Project Status</h2>
 
+Updated 8-22-2014.
+
 <li>Our initial batch of boards ran out due to the rush of orders from the end of the kickstarter campaign.
 <li>We ordered 50 PWBs (8-10-2014).
-<li>We received notice that the PWBs had shipped (8-14-2014).
-<li>We expect the PWBs to arrive in a week (typical delivery time is 8 days).
-<li>Depending upon how many boards we have in backlog we should be able to ship around the end of August 2014.
-<li>Order early to be at the front of the line when the new boards come in.
+<li>The PWBs are on their way from New Jersey (8-22-2014).
+<li>We expect the PWBs to arrive in the next couple days.
+<li>We should be able to ship around the end of August 2014.
+<li>Order soon to make sure you get a board.
 <p>
 If you have any questions, don't hesitate to <a href="http://land-boards.com/contact.htm">reach out to us</a>.
 <hr>
